crates/data-dict/tests/snapshots/validate_spec__s05_conflicts_not_on_both_sides.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s05-conflicts-not-on-both-sides.yaml\")"
---
Error: [S05] A `conflicts` entry must name a column on both sides of the join.
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:36:17 ]
    │
 36 │     conflicts: [amount]
    │                 ───┬──  
    │                    ╰──── `amount` is not a column of `food`
────╯
